--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -45,44 +45,44 @@ $colors: (
 $typography: (
   xs: (
     fontSize: 12px,
-    lineHeight: 1.5,
+    lineHeight: 18px,
   ),
   sm: (
     fontSize: 13px,
-    lineHeight: 1.69,
+    lineHeight: 22px,
   ),
   md: (
     fontSize: 14px,
-    lineHeight: 1.71,
+    lineHeight: 24px,
   ),
   lg: (
     fontSize: 16px,
-    lineHeight: 1.625,
+    lineHeight: 26px,
   ),
   "2lg": (
     fontSize: 18px,
-    lineHeight: 1.556,
+    lineHeight: 26px,
   ),
   xl: (
     fontSize: 20px,
-    lineHeight: 1.6,
+    lineHeight: 32px,
   ),
   "2xl": (
     fontSize: 24px,
-    lineHeight: 1.333,
+    lineHeight: 32px,
   ),
   "3xl": (
     fontSize: 32px,
-    lineHeight: 1.313,
+    lineHeight: 42px,
   ),
 );
 
 // 브레이크포인트 변수
 $breakpoints: (
   // mobile landscape
-  sm: 640px,
+  sm: 375px,
   // tablet
-  md: 768px,
+  md: 744px,
   // desktop, tablet landscape
   lg: 1024px,
   // large desktop
