feat/button - 버튼테스트

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -30,6 +30,7 @@ $colors: (
   blue-100: #535779,
   blue-200: #3e415b,
   blue-300: #2a2c3d,
+  blue-400: #1a1b2c,
 
   // Background
   background-100: #fcfcfc,
