--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,13 +12,14 @@
 
 html,
 body {
+  background-color: #ffffff;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background-color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
