feat/signup - 회원가입, 로그인 페이지 반응형까지

--- a/src/shared/components/Button/BasicButton.scss
+++ b/src/shared/components/Button/BasicButton.scss
@@ -12,8 +12,6 @@
       color: s.color(white);
 
       &:hover {
-        transform: scale(1.05);
-        transition: transform 0.2s ease-in-out;
         background-color: s.color(orange-200);
       }
 
@@ -27,8 +25,6 @@
       color: s.color(white);
 
       &:hover {
-        transform: scale(1.05);
-        transition: transform 0.2s ease-in-out;
         background-color: s.color(blue-200);
       }
 
@@ -42,8 +38,6 @@
       color: s.color(white);
 
       &:hover {
-        transform: scale(1.05);
-        transition: transform 0.2s ease-in-out;
         background-color: s.color(gray-100);
       }
 
@@ -85,5 +79,12 @@
         border: 1px solid s.color(gray-400);
       }
     }
+  }
+
+  &:disabled {
+    cursor: not-allowed;
+    opacity: 0.6;
+    background-color: s.color(gray-100);
+    color: s.color(gray-50);
   }
 }
